[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/scenes/level/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/DefaultGodotTheme/GodotTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/editor/MenuBar/MenuBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/editor/editor.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/editor/FileAccessCtrl/FileAccessCtrl.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/editor/MainCamera/MainCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/editor/ToolBar/ToolBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/editor/InspectorPanel/InspectorPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/editor/Popups/AboutPopupDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/editor/Popups/ReadmeAcceptDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scenes/editor/ObjectSelector/ObjectSelector.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/scenes/editor/ObjectDeleter/ObjectDeleter.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/scenes/editor/ObjectAdder/ObjectAdder.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/gameobj/preview_object/preview_game_object.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/scenes/editor/TilePainter/TilePainter.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/scenes/editor/Popups/VersionZeroWarningDialog.tscn" type="PackedScene" id=16]

[sub_resource type="GDScript" id=1]
script/source = "# EditAreaRect (Built-in)
# Written by: First

extends ReferenceRect

\"\"\"
	Enter desc here.
\"\"\"

#-------------------------------------------------
#      Classes
#-------------------------------------------------

#-------------------------------------------------
#      Signals
#-------------------------------------------------

#-------------------------------------------------
#      Constants
#-------------------------------------------------

#-------------------------------------------------
#      Properties
#-------------------------------------------------

var mouse_entered : bool

#-------------------------------------------------
#      Notifications
#-------------------------------------------------

func _input(event: InputEvent) -> void:
	if event is InputEventKey:
		emit_signal(\"gui_input\", event)
		
		#Change mouse pointer when space key is pressed
		if event.scancode == KEY_SPACE:
			if event.is_pressed() and mouse_entered:
				set_default_cursor_shape(Control.CURSOR_MOVE)
			else:
				set_default_cursor_shape(Control.CURSOR_ARROW)


#-------------------------------------------------
#      Virtual Methods
#-------------------------------------------------

#-------------------------------------------------
#      Override Methods
#-------------------------------------------------

#-------------------------------------------------
#      Public Methods
#-------------------------------------------------

#-------------------------------------------------
#      Connections
#-------------------------------------------------

func _on_EditAreaRect_mouse_entered() -> void:
	mouse_entered = true

func _on_EditAreaRect_mouse_exited() -> void:
	mouse_entered = false

#-------------------------------------------------
#      Private Methods
#-------------------------------------------------

#-------------------------------------------------
#      Setters & Getters
#-------------------------------------------------
"

[sub_resource type="Animation" id=2]
resource_name = "Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("MainCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/ToolBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, 32 ) ]
}

[node name="Editor" type="Node"]
script = ExtResource( 4 )

[node name="Level" parent="." instance=ExtResource( 1 )]

[node name="MainCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 3340, 3060 )

[node name="Scroll2PlayerPosDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ToolBar" parent="CanvasLayer/Control" instance=ExtResource( 7 )]
margin_top = 32.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MenuPanel" parent="CanvasLayer/Control" instance=ExtResource( 3 )]

[node name="FileAccessCtrl" parent="CanvasLayer/Control" instance=ExtResource( 5 )]
mouse_filter = 2

[node name="EditAreaRect" type="ReferenceRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
mouse_filter = 1
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectorPanel" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = 32.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="TitleHBox" parent="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox" index="0"]
margin_right = 264.0

[node name="InspectorHideBtn" parent="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox/TitleHBox" index="0"]
margin_right = 165.0

[node name="ViewCodeBtn" parent="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox/TitleHBox" index="1"]
margin_left = 169.0
margin_right = 264.0

[node name="TabContainer" parent="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox" index="1"]
margin_right = 264.0
margin_bottom = 560.0

[node name="LevelTab" parent="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox/TabContainer" index="0"]
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Popups" type="Control" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AboutPopupDialog" parent="CanvasLayer/Control/Popups" instance=ExtResource( 9 )]

[node name="ReadmeAcceptDialog" parent="CanvasLayer/Control/Popups" instance=ExtResource( 10 )]
visible = false

[node name="VersionZeroWarningDialog" parent="CanvasLayer/Control/Popups" instance=ExtResource( 16 )]

[node name="ObjectSelector" parent="." instance=ExtResource( 11 )]

[node name="ObjectDeleter" parent="." instance=ExtResource( 12 )]

[node name="ObjectAdder" parent="." instance=ExtResource( 13 )]
obj_to_add = ExtResource( 14 )
add_target_path = NodePath("../Level/Objects")

[node name="TilePainter" parent="." instance=ExtResource( 15 )]

[node name="EditorInitAnimation" type="AnimationPlayer" parent="."]
autoplay = "Anim"
anims/Anim = SubResource( 2 )
[connection signal="cleared_level" from="Level" to="." method="_on_Level_cleared_level"]
[connection signal="timeout" from="Scroll2PlayerPosDelayTimer" to="." method="_on_Scroll2PlayerPosDelayTimer_timeout"]
[connection signal="add_object_pressed" from="CanvasLayer/Control/ToolBar" to="." method="_on_ToolBar_add_object_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ToolBar" to="." method="_on_ToolBar_pressed"]
[connection signal="about" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_about"]
[connection signal="delete" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_delete"]
[connection signal="exiting" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_exiting"]
[connection signal="new_file" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_new_file"]
[connection signal="normal_zoom" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_normal_zoom"]
[connection signal="opening_file" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_opening_file"]
[connection signal="opening_preferences" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_opening_preferences"]
[connection signal="readme" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_readme"]
[connection signal="saving_file" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_saving_file"]
[connection signal="saving_file_as" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_saving_file_as"]
[connection signal="toggle_active_screens" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_active_screens"]
[connection signal="toggle_backgrounds" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_backgrounds"]
[connection signal="toggle_ladders" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_ladders"]
[connection signal="toggle_objects" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_objects"]
[connection signal="toggle_screen_grid" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_screen_grid"]
[connection signal="toggle_spikes" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_spikes"]
[connection signal="toggle_tile_grid" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_tile_grid"]
[connection signal="toggle_tiles" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_toggle_tiles"]
[connection signal="view_menu_about_to_show" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_view_menu_about_to_show"]
[connection signal="zoom_in" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_zoom_in"]
[connection signal="zoom_out" from="CanvasLayer/Control/MenuPanel" to="." method="_on_MenuPanel_zoom_out"]
[connection signal="opened_file" from="CanvasLayer/Control/FileAccessCtrl" to="." method="_on_FileAccessCtrl_opened_file"]
[connection signal="saved_file" from="CanvasLayer/Control/FileAccessCtrl" to="." method="_on_FileAccessCtrl_saved_file"]
[connection signal="gui_input" from="CanvasLayer/Control/EditAreaRect" to="." method="_on_EditAreaRect_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Control/EditAreaRect" to="CanvasLayer/Control/EditAreaRect" method="_on_EditAreaRect_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/EditAreaRect" to="CanvasLayer/Control/EditAreaRect" method="_on_EditAreaRect_mouse_exited"]
[connection signal="tile_selected" from="CanvasLayer/Control/InspectorPanel/PanelOpen/ContentVBox/TabContainer/TilemapTab" to="." method="_on_TilemapTab_tile_selected"]

[editable path="Level"]

[editable path="CanvasLayer/Control/InspectorPanel"]
